# MatrixLibrary

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  MatrixLibraryUnitTests.cpp  README.md
src/: ComputeMethod.h  GpuCompute.cpp  GpuCompute.h  Matrix.cpp  Matrix.h  Matrix_cpu.cpp  Matrix_opencl.cpp  gpuComputeKernels.cl
src/OpenCL/: ComputeMethod.cpp  GpuCompute.cpp  GpuCompute.h
src/OpenMP/: ComputeMethod.cpp
src/SingleThreaded/: ComputeMethod.cpp
testing/: MatrixLibraryPerformanceTests.cpp  MatrixLibraryUnitTests.cpp  PerformanceTest.h
